--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 .App {
   text-align: center;
 }
+
+.category-input {
+  position: absolute;
+  top: 0;
+  font-size: 14;
+  text-align: center;
+  display: block;
+  padding: 5;
+  width: 200px;
+  margin: 50px auto 0;
+  background: none;
+  color: #516561;
+  border: none;
+  border-bottom: 2px solid #516561;
+  position: relative;
+}
+
+.category-input:focus {
+  outline: none;
+}
+
+.svg-container {
+  overflow: visible;
+}
