--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -1,4 +1,4 @@
-$nail-color: #DBE9EE;
+$nail-color: #dbe9ee;
 $finger-color: #6298e8;
 
 // MIXINS
@@ -28,6 +28,19 @@ $finger-color: #6298e8;
 
 // LOADING
 // ---------
+.loader-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 100%;
+  overflow: visible;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 999;
+}
+
 .loading {
   position: absolute;
   left: 50%;
