--- a/src/components/common/variables.scss
+++ b/src/components/common/variables.scss
@@ -7,3 +7,6 @@
     font-family: "Actor";
     src: url("../../static/fonts/Actor_Regular.ttf");
 }
+
+$primary-color: #6298e8;
+$navbar-height: 55px;
