--- a/src/components/expenses/dashboard/expenseDashboard.scss
+++ b/src/components/expenses/dashboard/expenseDashboard.scss
@@ -1,7 +1,7 @@
 @import "../../common/variables.scss";
 
 $dark-blue: #001432;
-$month-label-margin: 5px auto -30px;
+$month-label-margin: 0 auto -30px;
 $block-width: 270px;
 $add-button-size:50px;
 $input-width: 350px;
