--- a/src/components/expenses/dashboard/expenseDashboard.scss
+++ b/src/components/expenses/dashboard/expenseDashboard.scss
@@ -181,7 +181,7 @@ $font: Dekko;
 
 .expense-form-button {
   display: block;
-  width: 150px;
+  width: 100px;
   height: 40px;
   margin: 10px 10px 10px auto;
   border-radius: 4px;
@@ -231,7 +231,7 @@ $font: Dekko;
 
 /* The Close Button */
 .close {
-  color: rgba(0, 0, 0, 0.6);
+  color: #fff;
   font-size: 28px;
   font-weight: bold;
   float: right;
@@ -246,52 +246,53 @@ $font: Dekko;
 }
 
 .modal-header {
-  padding: 20px 16px 5px;
+  padding: 15px 16px 10px;
   text-align: center;
+  background: $primary-color;
+  color: #fff;
 }
 
 .modal-body {
   padding: 15px 16px;
   margin: 5px 0 10px;
+
+  //overwrite react datepicker style
+  .react-datepicker-wrapper,
+  .react-datepicker__input-container,
+  .react-datepicker__input-container input {
+    display: block;
+    width: 100%;
+  }
+
+  .react-datepicker__input-container input {
+    font-size: 14px;
+    text-align: center;
+    display: block;
+    padding: 5px;
+    width: $input-width;
+    margin: 10px auto;
+    background: none;
+    color: black;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    font-family: $font;
+
+    &:focus {
+      border-bottom: 2px solid black;
+    }
+  }
+
+  .react-datepicker-popper {
+    transform: translate3d(calc(#{$input-width/2 - 50px}), 230px, 0px) !important;
+  }
+
+  .react-datepicker__triangle {
+    left: 50% !important;
+  }
 }
 
 .modal-footer {
   padding: 8px 16px;
   background-color: #fff;
-}
-
-
-//overwrite react datepicker style
-.react-datepicker-wrapper,
-.react-datepicker__input-container,
-.react-datepicker__input-container input {
-  display: block;
-  width: 100%;
-}
-
-.react-datepicker__input-container input {
-  font-size: 14px;
-  text-align: center;
-  display: block;
-  padding: 5px;
-  width: $input-width;
-  margin: 10px auto;
-  background: none;
-  color: black;
-  border: none;
-  border-bottom: 1px solid black;
-  outline: none;
-  font-family: $font;
-
-  &:focus {
-    border-bottom: 2px solid black;
-  }
-}
-
-.react-datepicker-popper {
-  transform: translate3d(calc(#{$input-width/2 - 50px}), 245px, 0px) !important;
-}
-
-.react-datepicker__triangle {
-  left: 50% !important;
 }
