--- a/src/components/expenses/dashboard/expenseDashboard.scss
+++ b/src/components/expenses/dashboard/expenseDashboard.scss
@@ -155,6 +155,10 @@ $font: Dekko;
   &:focus {
     border-bottom: 2px solid black;
   }
+
+  &.amount {
+    padding-left: 20px;
+  }
 }
 
 .modal {
@@ -260,6 +264,7 @@ $font: Dekko;
 .modal-body {
   padding: 15px 16px;
   margin: 5px 0 10px;
+  position: relative;
 
   //overwrite react datepicker style
   .react-datepicker-wrapper,
@@ -294,6 +299,15 @@ $font: Dekko;
 
   .react-datepicker__triangle {
     left: 50% !important;
+  }
+
+  .dollar-sign {
+    position: absolute;
+    top: calc(50% - 10px);
+    left: calc(50% - #{$input-width} / 2 + 5px);
+    opacity: 0.7;
+    font-size: 14px;
+    font-family: Dekko;
   }
 }
 
