--- a/src/components/expenses/expense/expense.scss
+++ b/src/components/expenses/expense/expense.scss
@@ -5,9 +5,17 @@
 }
 
 .expense-page {
+    position: relative;
     width: $page-width;
     height: $page-height;
     margin: auto;
+
+    .expense-total-svg-container {
+        @extend .expense-svg-container;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
 
     .date-picker {
         position: relative;
