--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 
-$pacman-color: rgba(250, 216, 89, 1);
+$pacman-color: #2c82c9;
 $pacman-size: 96px;
 $balls-size: 16px;
 
